--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,42 @@
-# Python
-*.pyc
-*.pyo
-*.pyd
-__pycache__
+# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
-# Virtual Environment
-.venv/
-env/
-venv/
-ENV/
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
 
-# Database
-db.sqlite3
-*.sqlite3
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
 
-# Django specific
-*.log
-*.pot
-*.pyc
-*.pyo
-*.db
-
-# Media files
-media/
-
-# Static files
-static/
-
-# IDEs
-.vscode/
+# IDEs and editors
 .idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
-# MacOS
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+
+# System files
 .DS_Store
-
-# Windows
 Thumbs.db
